Improve welcome message.
Trying to show:
* Effective communication
* Portfolio
* Eager to learn
* Strong Tech skills
* Relevant Experience

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ a {
 }
 .container {
   margin-top: 20vh;
-  max-width: 80vw;
+  max-width: 100vw;
 }
 </style>
 
@@ -17,33 +17,58 @@ a {
   <div class='row align-items-center'>
     <ul class='list-inline col text-center'>
       <li class='list-inline-item'><h1>Marcos Bellucci</h1></li>
-      <!-- <li class='list&#45;inline&#45;item'><a href="/blog.html">Blog</a></li> -->
-      <li class='list-inline-item'><a href="/portfolio.html">Portfolio</a></li>
-      <li class='list-inline-item'><a target='_blank' href="/resume.html">Resume</a></li>
-      <li class='list-inline-item'><a href="/oss_contributions.html">Open Source</a></li>
+      <!-- <li class='list&#45;inline&#45;item'><a href='/blog.html'>Blog</a></li> -->
+      <li class='list-inline-item'><a href='/portfolio.html'>Portfolio</a></li>
+      <li class='list-inline-item'><a target='_blank' href='/resume.html'>Resume</a></li>
+      <li class='list-inline-item'><a href='/oss_contributions.html'>Open Source</a></li>
     </ul>
   </div>
 
   <div class='row align-items-center'>
     <div class='col text-center'>
-      <i class="devicon-ruby-plain-wordmark colored"></i>
-      <i class="devicon-rails-plain-wordmark colored"></i>
-      <i class="devicon-typescript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
+      <i class='devicon-ruby-plain-wordmark colored'></i>
+      <i class='devicon-rails-plain-wordmark colored'></i>
+      <i class='devicon-typescript-plain colored'></i>
+      <i class='devicon-react-original-wordmark colored'></i>
     </div>
   </div>
 
   <div class='row'>
     <div class='col-sm-3'></div>
-    <div class='col-sm'>
-      <p class='lead'>
-      <br/>
-      Software Engineer with Computer Science background<br/>
-      <br/>
-      10 years in web-development<br/>
-      <br/>
-      7 different projects in which I helped to build multi-user, distributed applications that support high traffic with millions of registered users<br/>
-      <br/>
+    <div class='col-sm lead'>
+      <p>
+      👋 Welcome to my personal homepage!<br />
+
+      <p>
+      I'm a Software Engineer who loves crafting beautiful software. I completed my CS degree in 2012 and have been working with U.S. startups since then
+      In particular worked for Therapydia, <a href='http://flavorpill.com'>Flavorpill</a>, <a href='https://www.sportsengine.com/'>sport-engine</a>, <a href='https://trailhead.salesforce.com/'>Trailhead (Salesforce)</a>, and <a href='https://www.occupier.com/'>Occupier</a>.
+      Building full stack small/medium and large web-apps with Rails that usually send emails, enqueue jobs, store uploads in the cloud, handle user authorization and authentication, display dashboards for analytics, create reports and integrate with external services.
+      </p>
+
+      <p>
+      I've also made valuable contributions beyond coding, I've given technical presentations, helped hire talented folks in Uruguay, motivated team members to collaborate, and explored new tech to enhance our projects.<br />
+      I'm always eager to learn and adapt to new technologies
+      </p>
+
+      <p>
+      Understanding the core challenges of the companies I work with is vital to me. I'm driven by finding solutions that make a positive impact.<br />
+      </p>
+
+      <p>
+      Outside of work, I'm a proud dad of three amazing kids.
+      I enjoy programming for fun and connect with talented individuals so I attend to meetups whenever I can.<br />
+      </p>
+
+      <p>
+      You can view or print my <a href='/resume'>resume</a> or check some of the <a href='/portfolio'>projects I've built</a> on my free time<br />
+      If you're interested in working together or simply want to connect, feel free to reach out to me on <a href='https://www.linkedin.com/in/marcos-bellucci/?locale=en_US'>LinkedIn</a> or <a href='https://twitter.com/delBetu'>Twitter</a>.
+      I'm always thrilled to meet new people who share the same enthusiasm for tech and innovation.<br />
+      </p>
+
+      <p>
+      Thanks for visiting
+      </p>
+      </p>
     </div>
     <div class='col-sm-3'></div>
   </div>
