Update portfolio page
Add cards for open source contributions.

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,10 @@ title: Portfolio
   }
 </style>
 
+<div class='row'>
+  <h3>Personal Projects/Experiments</h3>
+</div>
+
 <div class='card-deck'>
   <div class='card'>
     <div class='card-body'>
@@ -90,24 +94,50 @@ title: Portfolio
 </div>
 
 <div class='row'>
-  <table>
-    <tr>
-      <th colspan='2'>Open Source Contributions</th></tr>
-    <tr>
-      <td>October 2020</td>
-      <td><a href='https://github.com/ifmeorg/ifme/pulls?q=is%3Apr+is%3Aclosed+author%3Adelbetu'>ifme</a>  </td>
-    </tr>
-    <tr>
-      <td>October 2020</td>
-      <td><a href='https://github.com/vimcolorschemes/vimcolorschemes/pulls?q=is%3Apr+is%3Aclosed+author%3Adelbetu'>vimcolorschemes</a>  </td>
-    </tr>
-    <tr>
-      <td>Jan 2019</td>
-      <td><a href='https://github.com/forem/forem/pulls?q=is%3Apr+author%3Adelbetu+'>Dev.to</a>  </td>
-    </tr>
-    <tr>
-      <td>October 2015</td>
-      <td><a href='https://github.com/datauy/back-end-birra/pull/4 '>BackendBirra</a>  </td>
-    </tr>
-  </table>
+  <h3>Open Source Contributions</h3>
+</div>
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>October 2020</b>
+      <h5 class='card-title'>If-Me.org</h5>
+      <p class='card-text'>A community for mental health experience sharing</p>
+      <p class='card-text'>Rails/Rspec React/ReactTestingLibrary</p>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://github.com/ifmeorg/ifme/pulls?q=is%3Apr+is%3Aclosed+author%3Adelbetu'>Github</a>  </div>
+  </div>
+
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>October 2020</b>
+      <h5 class='card-title'>Vim Colorschemes</h5>
+      <p class='card-text'>List of hundreds of vim color scheme repositories</p>
+      <p class='card-text'>Typescript/React Mongodb gatsby</p>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://github.com/vimcolorschemes/vimcolorschemes/pulls?q=is%3Apr+is%3Aclosed+author%3Adelbetu'>Github</a>  </div>
+  </div>
+  </div>
+
+<div class='card-deck'>
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>Jan 2019</b>
+      <h5 class='card-title'>Dev.to</h5>
+      <p class='card-text'>Forem is open source software for building communities.</p>
+      <p class='card-text'>Ruby/Rails</p>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://github.com/forem/forem/pulls?q=is%3Apr+author%3Adelbetu+'>Github</a>  </div>
+  </div>
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>October 2015</b>
+      <h5 class='card-title'>Backend Birra</h5>
+      <p class='card-text'>Backend Rails</p>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://github.com/datauy/back-end-birra/pull/4'>Github</a>  </div>
+  </div>
 </div>
