--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,21 @@ title: Portfolio
 <div class='card-deck'>
   <div class='card'>
     <div class='card-body'>
+      <b>Jun 2023</b>
+      <h5 class='card-title'> Ruby-Webassembly Pacman Game</h5>
+      <p class='card-text'>
+      Html5 Canvas Game running Ruby code on the browser<br/>
+      CRuby 3.2 was released with the ability to run <a href='https://github.com/ruby/ruby.wasm'>Ruby in the browser</a> so I decided to give it a try.
+      </p>
+    </div>
+
+    <div class='card-footer'>
+      <a href='https://github.com/delbetu/Wasm_Pacman' class='btn btn-primary' role='button'>Github</a>
+    </div>
+  </div>
+  
+  <div class='card'>
+    <div class='card-body'>
       <b>Oct 2020</b>
       <h5 class='card-title'> Hexa (Ruby, Rack, Sequel, Graphql)</h5>
       <p class='card-text'>
