portfolio: add ruby wasm talk

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,3 +156,34 @@ title: Portfolio
       <div class='card-footer'><a class='btn btn-primary' href='https://github.com/datauy/back-end-birra/pull/4'>Github</a>  </div>
   </div>
 </div>
+
+
+
+
+
+<div class='row'>
+  <h3>Talks</h3>
+</div>
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>September 2023</b>
+      <h5 class='card-title'>Ruby on Wasm</h5>
+      <p class='card-text'>Public talk at local Ruby meetup group</p>
+      <p class='card-text'>Talked about web assembly origins, the impact is making in others languages and what Ruby is doing to adopt this technology</p>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://github.com/delbetu/ruby_on_wasm'>Github</a>  </div>
+  </div>
+
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>October 2020</b>
+      <h5 class='card-title'>Vim Colorschemes</h5>
+      <p class='card-text'>List of hundreds of vim color scheme repositories</p>
+      <p class='card-text'>Typescript/React Mongodb gatsby</p>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://github.com/vimcolorschemes/vimcolorschemes/pulls?q=is%3Apr+is%3Aclosed+author%3Adelbetu'>Github</a>  </div>
+  </div>
+</div>
