portfolio: wasm video & slides

--- a/portfolio.html
+++ b/portfolio.html
@@ -173,6 +173,12 @@ title: Portfolio
       <p class='card-text'>Public talk at local Ruby meetup group</p>
       <p class='card-text'>Talked about web assembly origins, the impact is making in others languages and what Ruby is doing to adopt this technology</p>
     </div>
-    <div class='card-footer'><a class='btn btn-primary' href='https://github.com/delbetu/ruby_on_wasm_talk'>Github</a>  </div>
+    <div class='card-footer'>
+      <a class='btn btn-primary' href='https://github.com/delbetu/ruby_on_wasm_talk'>Github</a>
+      <p>
+        <iframe src="https://drive.google.com/file/d/1CYuMU3eImN8Pttz6sIge4DMElQT0YidX/preview" width="640" height="480" allow="autoplay"></iframe><br>
+        <iframe src="https://docs.google.com/presentation/d/1dIBJPfRj-LOtrgxLkizXmuGcJX8F657IspVFlKcDBsM/embed" frameborder="0" width="640" height="480" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe><br>
+      </p>
+    </div>
   </div>
 </div>
