--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,12 @@ title: Portfolio
   }
 </style>
 
+
+
+
+
+<!-- ############################################ PERSONAL PROJECTS ############################################ -->
+
 <div class='row'>
   <h3>Personal Projects/Experiments</h3>
 </div>
@@ -108,6 +114,16 @@ title: Portfolio
   </div>
 </div>
 
+
+
+
+
+
+
+
+
+<!-- ############################################ OPEN SOURCE ############################################ -->
+
 <div class='row'>
   <h3>Open Source Contributions</h3>
 </div>
@@ -133,7 +149,7 @@ title: Portfolio
     </div>
       <div class='card-footer'><a class='btn btn-primary' href='https://github.com/vimcolorschemes/vimcolorschemes/pulls?q=is%3Apr+is%3Aclosed+author%3Adelbetu'>Github</a>  </div>
   </div>
-  </div>
+</div>
 
 <div class='card-deck'>
 
@@ -161,6 +177,10 @@ title: Portfolio
 
 
 
+
+
+<!-- ############################################ TALKS ############################################ -->
+
 <div class='row'>
   <h3>Talks</h3>
 </div>
@@ -182,3 +202,111 @@ title: Portfolio
     </div>
   </div>
 </div>
+
+
+
+
+<!-- ############################################ WRITING ############################################ -->
+
+<div class='row'>
+  <h3>Blog Posts</h3>
+</div>
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>May 2021</b>
+      <h5 class='card-title'>Avoid nil propagation</h5>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/avoid-nil-propagation-263h'>Dev.to</a>  </div>
+  </div>
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>Apr 2021</b>
+      <h5 class='card-title'>Rails Dependent Destroy</h5>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/rails-dependent-destroy-id3'>Dev.to</a>  </div>
+  </div>
+</div>
+
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>April 2021</b>
+      <h5 class='card-title'>Join vs includes vs eager load vs preload</h5>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/join-vs-includes-vs-eager-load-vs-preload-36l3'>Dev.to</a>  </div>
+  </div>
+
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>May 2021</b>
+      <h5 class='card-title'>Ruby Money &amp; BigDecimal</h5>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/ruby-money-bigdecimal-1chb'>Dev.to</a>  </div>
+  </div>
+</div>
+
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>February 2020</b>
+      <h5 class='card-title'>Choosing a Storage Strategy</h5>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/choosing-a-storage-strategy-1l6a'>Dev.to</a>  </div>
+  </div>
+
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>January 2020</b>
+      <h5 class='card-title'>A simple SOLID object-oriented solution example.</h5>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/a-simple-solid-object-oriented-solution-example-244'>Dev.to</a>  </div>
+  </div>
+</div>
+
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>January 2020</b>
+      <h5 class='card-title'>Dealing with untestable code</h5>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/dealing-with-untestable-code-1emj'>Dev.to</a>  </div>
+  </div>
+
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>December 2019</b>
+      <h5 class='card-title'>Ruby Bit Manipulation</h5>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/ruby-bit-manipulation-2l34'>Dev.to</a>  </div>
+  </div>
+</div>
+
+
+<div class='card-deck'>
+  <div class='card'>
+    <div class='card-body'>
+      <b>June 2019</b>
+      <h5 class='card-title'>A TDD Example</h5>
+    </div>
+    <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/a-tdd-example-e4o'>Dev.to</a>  </div>
+  </div>
+
+
+  <div class='card'>
+    <div class='card-body'>
+      <b>July 2018</b>
+      <h5 class='card-title'>Vim practical example</h5>
+    </div>
+      <div class='card-footer'><a class='btn btn-primary' href='https://dev.to/delbetu/vim-practical-example-1kbk'>Dev.to</a>  </div>
+  </div>
+</div>
+
