--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 </p>
 
 <p>
-I'm a Software Engineer who loves crafting beautiful software. I completed my CS degree in 2012 and have been working with U.S. startups since then
+I'm a voracious learner and passionate doer who enjoy crafting beautiful software. I completed my CS degree in 2012 and have been working with U.S. startups since then
 In particular worked for Therapydia, <a href='http://flavorpill.com'>Flavorpill</a>, <a href='https://www.sportsengine.com/'>sport-engine</a>, <a href='https://trailhead.salesforce.com/'>Trailhead (Salesforce)</a>, and <a href='https://www.occupier.com/'>Occupier</a>.
 Building full stack small/medium and large web-apps with Rails that usually send emails, enqueue jobs, store uploads in the cloud, handle user authorization and authentication, display dashboards for analytics, create reports and integrate with external services.
 </p>
